tests/ui/type-alias-impl-trait/recursive-fn-tait.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/recursive-fn-tait.rs:15:6
   |
LL | ) -> Diff {
   |      ^^^^ expected `{closure@$DIR/recursive-fn-tait.rs:8:5: 8:16}`, got `{closure@$DIR/recursive-fn-tait.rs:16:5: 16:20}`
   |
note: previous use here
  --> $DIR/recursive-fn-tait.rs:7:18
   |
LL | pub fn lift() -> Diff {
   |                  ^^^^

error: aborting due to 1 previous error

